Mettre à jour 'langs/fr_FR/cbwarquarterstats.lang'

--- a/langs/fr_FR/cbwarquarterstats.lang
+++ b/langs/fr_FR/cbwarquarterstats.lang
@@ -3,7 +3,7 @@ Module994989Name=Statistiques par trimestre
 Module994989Desc=Statistiques des produits et services par trimestre
 
 StatsPerQuarter=Statistiques par trimestre
-SellByQuarterHT=Chiffre d'affaire
+SellByQuarterHT=Chiffre d'affaires
 ChargesByQuarterHT=Charges / taxes
 Quarter1=T-1
 Quarter2=T-2
