Load default option value & change option name

--- a/langs/en_US/cbwarquarterstats.lang
+++ b/langs/en_US/cbwarquarterstats.lang
@@ -8,5 +8,5 @@ Quarter2=Q-2
 Quarter3=Q-3
 Quarter4=Q-4
 QuarterStatsSetup=Statistics per quarter setup
-ChargesNumOption=Charges calculation value (percent)
+ChargesNumOption=Charges percent
 IntNeeded=The value must be an integer
