display abattment table

--- a/langs/fr_FR/cbwarquarterstats.lang
+++ b/langs/fr_FR/cbwarquarterstats.lang
@@ -3,10 +3,12 @@ Module994989Desc=Statistiques des produits et services par trimestre
 StatsPerQuarter=Statistiques par trimestre
 SellByQuarterHT=Chiffre d'affaires
 ChargesByQuarterHT=Charges / taxes
+AbtmtByQuarter=Imposable après abattement
 Quarter1=T-1
 Quarter2=T-2
 Quarter3=T-3
 Quarter4=T-4
 QuarterStatsSetup=Paramétrage des statistiques par trimestre
 ChargesNumOption=Pourcentage de charges
+AbtmtNumOption=Pourcentage d'abattement
 IntNeeded=La valeur saisie doit être un nombre entier
